docs(reto-b): agregar CLAUDE.md y actualizar README.md con el módulo de test